chore: sprint4 베이스 코드로 초기화